--- a/css/style.css
+++ b/css/style.css
@@ -999,6 +999,10 @@ main .planes-asesorias .plan-tarjeta {
         margin-right: 0;
     }
 
+    .banner-contacto{
+        height: 50vh;
+    }
+
     .banner-contacto h2 {
         font-size: 30px;
     }
