--- a/css/style.css
+++ b/css/style.css
@@ -928,6 +928,10 @@ main .planes-asesorias .plan-tarjeta {
         font-size: 19px;
     }
 
+    .banner-contacto{
+        align-items: center;
+    }
+
     .banner-contacto h2 {
         font-size: 40px;
     }
