--- a/css/style.css
+++ b/css/style.css
@@ -928,7 +928,7 @@ main .planes-asesorias .plan-tarjeta {
         font-size: 19px;
     }
 
-    .banner-contacto{
+    main .banner-contacto{
         align-items: center;
     }
 
