--- a/css/style.css
+++ b/css/style.css
@@ -933,6 +933,7 @@ main .planes-asesorias .plan-tarjeta {
     }
 
     .banner-contacto h2 {
+        padding-top: 40px;
         font-size: 40px;
     }
 
