--- a/css/style.css
+++ b/css/style.css
@@ -504,6 +504,7 @@ footer .footer-right .footer-right-a {
     color: whitesmoke;
     font-family: 'Poppins', sans-serif;
     font-size: 30px;
+    padding-bottom: 50px;
 }
 
 .banner-contacto img {
@@ -928,16 +929,12 @@ main .planes-asesorias .plan-tarjeta {
         font-size: 19px;
     }
 
-    main .banner-contacto{
-        align-items: center;
-    }
-
     .banner-contacto h2 {
-        padding-top: 40px;
         font-size: 40px;
     }
 
     .banner-contacto h3 {
+        padding-bottom: 100px;
         font-size: 20px;
     }
 
