--- a/css/style.css
+++ b/css/style.css
@@ -416,6 +416,10 @@ footer .footer-left a {
     font-family: 'Times New Roman', Times, serif;
 }
 
+footer .footer-left a:hover{
+    color: blueviolet;
+}
+
 footer .footer-left p {
     color: rgb(148, 146, 146);
     font-size: 15px;
@@ -557,6 +561,11 @@ footer .footer-right .footer-right-a {
     width: 30px;
     height: 30px;
     margin: 15px;
+    transition: 0.5s;
+}
+
+.contacto .contacto-social-media ul li img:hover {
+    transform: scale(1.5);
 }
 
 .contacto .contacto-social-media p {
@@ -582,6 +591,16 @@ footer .footer-right .footer-right-a {
     padding: 10px;
     margin: 10px 0 10px 0;
     border: solid 2px rgb(0, 0, 0);
+}
+
+.contacto .contacto-form .boton-enviar:hover {
+    width: 100%;
+    box-sizing: border-box;
+    padding: 10px;
+    margin: 10px 0 10px 0;
+    color: whitesmoke;
+    background-color: rgb(168, 79, 252);
+    border: 2px solid whitesmoke;
 }
 
 .contacto .contacto-form textarea {
