--- a/scss/components/_main.scss
+++ b/scss/components/_main.scss
@@ -7,11 +7,13 @@ main{
         width: 100%;
         height: 89vh;
         background-repeat: no-repeat;
+        display: flex;
+        justify-content: center;
+        align-items: center;
         h2{
             color: whitesmoke;
             font-family: 'Poppins', sans-serif;
             font-size: 30px;
-            padding-top: 110px;
             margin: 0;
             text-shadow: -2px -2px 1px rgb(0, 0, 0), 2px 2px 1px rgb(0, 0, 0), -2px 2px 1px rgb(0, 0, 0), 2px -2px 1px rgb(0, 0, 0);
         }
@@ -281,13 +283,15 @@ main{
             color: blueviolet;
             font-family: 'Poppins', sans-serif;
             font-size: 70px;
+            margin: 0;
             text-shadow: -2px -2px 1px rgb(0, 0, 0), 2px 2px 1px rgb(0, 0, 0), -2px 2px 1px rgb(0, 0, 0), 2px -2px 1px rgb(0, 0, 0);
         }
         h3{
             color: whitesmoke;
             font-family: 'Poppins', sans-serif;
             font-size: 30px;
-            padding-bottom: 65px;
+            margin: 0;
+            padding-bottom: 90px;
             text-shadow: -2px -2px 1px rgb(0, 0, 0), 2px 2px 1px rgb(0, 0, 0), -2px 2px 1px rgb(0, 0, 0), 2px -2px 1px rgb(0, 0, 0);
         }
     }
@@ -326,6 +330,33 @@ main{
 
     /*-----------------Page Planes----------------*/
 
+    .banner-planes{
+        background-image: url(../img/banner-planes.jpg);
+        background-repeat: no-repeat;
+        background-position: center;
+        background-color: black;
+        width: 100%;
+        height: 89vh;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+        div{
+            h2{
+                color: whitesmoke;
+                font-family: 'Poppins', sans-serif;
+                font-size: 30px;
+                text-shadow: -2px -2px 1px black, 2px 2px 1px black, -2px 2px 1px black, 2px -2px 1px black;
+            }
+            h3{
+                color: blueviolet;
+                font-family: 'Poppins', sans-serif;
+                font-size: 60px;
+                text-shadow: -2px -2px 1px black, 2px 2px 1px black, -2px 2px 1px black, 2px -2px 1px black; 
+            }
+        }
+    }
     .planes-asesorias{
         display: flex;
         flex-wrap: wrap;
@@ -392,6 +423,7 @@ main{
         background-image: url(../img/banner-contacto.jpg);
         background-repeat: no-repeat;
         background-position: top;
+        background-color: blueviolet;
         width: 100%;
         height: 89vh;
         text-align: center;
@@ -402,13 +434,15 @@ main{
             color: blueviolet;
             font-family: 'Poppins', sans-serif;
             font-size: 70px;
+            margin: 0;
             text-shadow: -2px -2px 1px rgb(0, 0, 0), 2px 2px 1px rgb(0, 0, 0), -2px 2px 1px rgb(0, 0, 0), 2px -2px 1px rgb(0, 0, 0);
         }
         h3{
             color: whitesmoke;
             font-family: 'Poppins', sans-serif;
             font-size: 30px;
-            padding-bottom: 50px;
+            margin: 0;
+            padding-bottom: 90px;
             text-shadow: -2px -2px 1px rgb(0, 0, 0), 2px 2px 1px rgb(0, 0, 0), -2px 2px 1px rgb(0, 0, 0), 2px -2px 1px rgb(0, 0, 0);
         }
     }
@@ -554,7 +588,7 @@ main{
         .banner-perfil{
             display: grid;
             grid-template-columns: repeat(7,1fr);
-            grid-template-rows: repeat(5,135px);
+            grid-template-rows: repeat(5,17.8vh);
             grid-template-areas:
                 "img-a img-a img-b img-b img-b img-c img-c"
                 "img-a img-a img-b img-b img-b img-c img-c"
@@ -584,10 +618,14 @@ main{
             }
         }
         .banner-title{
+            width: 100%;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
             text-align: center;
             position: absolute;
-            top: 480px;
-            left: 35%;
+            top: 65vh;
             text-shadow: -2px -2px 1px rgb(0, 0, 0), 2px 2px 1px rgb(0, 0, 0), -2px 2px 1px rgb(0, 0, 0), 2px -2px 1px rgb(0, 0, 0);
             h2{
                 font-style: italic;
@@ -601,7 +639,7 @@ main{
                 font-style: italic;
                 font-family: 'Poppins', sans-serif;
                 font-size: 35px;
-                color: blueviolet;
+                color: rgb(255, 255, 255);
                 width: 450px;
                 margin: 0;
             }
