--- a/scss/base/_mediaquery.scss
+++ b/scss/base/_mediaquery.scss
@@ -31,6 +31,30 @@
     main .contacto .direcciones iframe {
         margin: 20px 0 20px 0;
     }
+    main .banner-nosotros h2 {
+        font-size: 55px;
+    }
+    main .banner-nosotros h3 {
+        font-size: 25px;
+    }
+    main .nosotros div h2{
+        font-size: 50px;
+    }
+    main .nosotros div h3{
+        font-size: 25px;
+    }
+    main .nosotros div h4{
+        font-size: 25px;
+    }
+    main .nosotros div p{
+        font-size: 20px;
+    }
+    main .banner-planes div h2 {
+        font-size: 25px;
+    }
+    main .banner-planes div h3 {
+        font-size: 50px;
+    }
 }
 
 @media screen and (max-width:750px) {
@@ -77,6 +101,36 @@
         width: 25px;
         height: 25px;
         margin: 10px;
+    }
+    main .banner-nosotros h2 {
+        font-size: 45px;
+    }
+    main .banner-nosotros h3 {
+        font-size: 23px;
+    }
+    main .nosotros div h2{
+        font-size: 40px;
+    }
+    main .nosotros div h3{
+        font-size: 23px;
+    }
+    main .nosotros div h4{
+        font-size: 23px;
+    }
+    main .nosotros div p{
+        font-size: 17px;
+    }
+    main .banner-planes div h2 {
+        font-size: 20px;
+    }
+    main .banner-planes div h3 {
+        font-size: 40px;
+    }
+    main .mi-perfil .banner-title h2 {
+        font-size:50px;
+    }
+    main .mi-perfil .banner-title h3 {
+        font-size: 25px;
     }
 }
 
@@ -134,6 +188,40 @@
         width: 300px;
         height: 250px;
     }
+    main .banner-nosotros h2 {
+        font-size: 30px;
+    }
+    main .banner-nosotros h3 {
+        font-size: 18px;
+    }
+    main .nosotros div h2{
+        font-size: 30px;
+    }
+    main .nosotros div h3{
+        font-size: 20px;
+    }
+    main .nosotros div h4{
+        font-size: 20px;
+    }
+    main .nosotros div p{
+        font-size: 13px;
+    }
+    main .banner-planes div h2 {
+        font-size: 16px;
+    }
+    main .banner-planes div h3 {
+        font-size: 30px;
+    }
+    main .planes-asesorias .plan-tarjeta {
+        margin-left: 0;
+        margin-right: 0;
+    }
+    main .mi-perfil .banner-title h2 {
+        font-size:40px;
+    }
+    main .mi-perfil .banner-title h3 {
+        font-size: 20px;
+    }
 }
 
 @media screen and (max-width:350px) {
@@ -148,5 +236,29 @@
     }
     main .banner-contacto h3 {
         font-size: 12px;
+    }
+    main .banner-nosotros h2 {
+        font-size: 25px;
+    }
+    main .banner-nosotros h3 {
+        font-size: 15px;
+    }
+    main .nosotros div h2{
+        font-size: 25px;
+    }
+    main .nosotros div h3{
+        font-size: 15px;
+    }
+    main .nosotros div h4{
+        font-size: 15px;
+    }
+    main .nosotros div p{
+        font-size: 11px;
+    }
+    main .mi-perfil .banner-title h2 {
+        font-size: 35px;
+    }
+    main .mi-perfil .banner-title h3 {
+        font-size: 18px;
     }
 }
