--- a/css/estilos.css
+++ b/css/estilos.css
@@ -10,6 +10,16 @@
   grid-template-rows: 105px auto 300px;
   grid-template-areas: "header header header" "main main main" "footer footer footer"; }
 
+header a, main .banner, main .info .info-a, main .info .info-b, main .info .info-c, main .planes-boton, main .img-galery .galery-a, main .img-galery .galery-b, main .img-galery .galery-c, main .nosotros, main .banner-planes, main .contacto, main .contacto .contacto-social-media, main .contacto .contacto-form, main .contacto .contacto-form .nombre, main .contacto .contacto-form .email, main .contacto .contacto-form .dudas, main .contacto .contacto-form .boton-enviar, main .contacto .direcciones, main .mi-perfil, main .mi-perfil .banner-title, main .logueo {
+  display: flex;
+  justify-content: center;
+  align-items: center; }
+
+header a, main .banner, main .info .info-a, main .info .info-b, main .info .info-c, main .planes-boton, main .img-galery .galery-a, main .img-galery .galery-b, main .img-galery .galery-c, main .nosotros, main .banner-planes, main .contacto, main .contacto .contacto-social-media, main .contacto .contacto-form, main .contacto .contacto-form .nombre, main .contacto .contacto-form .email, main .contacto .contacto-form .dudas, main .contacto .contacto-form .boton-enviar, main .contacto .direcciones, main .mi-perfil, main .mi-perfil .banner-title, main .logueo {
+  display: flex;
+  justify-content: center;
+  align-items: center; }
+
 header {
   background: black;
   width: 100%;
@@ -37,10 +47,7 @@ header {
             color: blueviolet; }
   header a {
     text-decoration: none;
-    display: flex;
     flex-direction: row;
-    justify-content: center;
-    align-items: center;
     text-decoration: none;
     color: whitesmoke;
     font-family: 'Times New Roman', Times, serif;
@@ -69,35 +76,33 @@ header {
         font-size: 20px;
         font-style: italic; }
 
+header a, main .banner, main .info .info-a, main .info .info-b, main .info .info-c, main .planes-boton, main .img-galery .galery-a, main .img-galery .galery-b, main .img-galery .galery-c, main .nosotros, main .banner-planes, main .contacto, main .contacto .contacto-social-media, main .contacto .contacto-form, main .contacto .contacto-form .nombre, main .contacto .contacto-form .email, main .contacto .contacto-form .dudas, main .contacto .contacto-form .boton-enviar, main .contacto .direcciones, main .mi-perfil, main .mi-perfil .banner-title, main .logueo {
+  display: flex;
+  justify-content: center;
+  align-items: center; }
+
 main {
-  grid-area: main;
-  /**--------------Page Nosotros-------------*/
-  /*-----------------Page Planes----------------*/
-  /*----------------Page Contacto---------------*/
-  /*-----------------Page Mi Perfil----------------*/ }
+  grid-area: main; }
   main .banner {
     text-align: center;
     background-image: url(../img/banner-index.jpg);
     background-position: center;
     width: 100%;
     height: 89vh;
-    background-repeat: no-repeat;
-    display: flex;
-    justify-content: center;
-    align-items: center; }
+    background-repeat: no-repeat; }
     main .banner h2 {
       color: whitesmoke;
       font-family: 'Poppins', sans-serif;
       font-size: 30px;
       margin: 0;
-      text-shadow: -2px -2px 1px black, 2px 2px 1px black, -2px 2px 1px black, 2px -2px 1px black; }
+      text-shadow: -2px -2px 1px black 0, 0, 0, 2px 2px 1px black 0, 0, 0, -2px 2px 1px black 0, 0, 0, 2px -2px 1px black 0, 0, 0; }
     main .banner h3 {
       color: blueviolet;
       font-family: 'Poppins', sans-serif;
       font-size: 70px;
       margin-top: 70px;
       margin-bottom: 90px;
-      text-shadow: -2px -2px 1px black, 2px 2px 1px black, -2px 2px 1px black, 2px -2px 1px black; }
+      text-shadow: -2px -2px 1px black 0, 0, 0, 2px 2px 1px black 0, 0, 0, -2px 2px 1px black 0, 0, 0, 2px -2px 1px black 0, 0, 0; }
     main .banner a {
       color: whitesmoke;
       text-decoration: none;
@@ -105,7 +110,7 @@ main {
       font-family: 'Poppins', sans-serif;
       border: 3px solid blueviolet;
       padding: 8px;
-      text-shadow: -2px -2px 1px black, 2px 2px 1px black, -2px 2px 1px black, 2px -2px 1px black; }
+      text-shadow: -2px -2px 1px black 0, 0, 0, 2px 2px 1px black 0, 0, 0, -2px 2px 1px black 0, 0, 0, 2px -2px 1px black 0, 0, 0; }
       main .banner a:hover {
         color: whitesmoke;
         background-color: blueviolet;
@@ -114,7 +119,7 @@ main {
     display: flex;
     width: 100%;
     background-color: rgba(0, 0, 0, 0.897);
-    color: white;
+    color: whitesmoke;
     box-sizing: border-box;
     border-top: 15px solid blueviolet;
     flex-wrap: wrap;
@@ -124,26 +129,17 @@ main {
     main .info .info-a {
       width: 270px;
       margin: 40px;
-      display: flex;
       flex-direction: column;
-      justify-content: center;
-      align-items: center;
       text-align: center; }
     main .info .info-b {
       width: 270px;
       margin: 40px;
-      display: flex;
       flex-direction: column;
-      justify-content: center;
-      align-items: center;
       text-align: center; }
     main .info .info-c {
       width: 270px;
       margin: 40px;
-      display: flex;
       flex-direction: column;
-      justify-content: center;
-      align-items: center;
       text-align: center; }
     main .info img {
       width: 100px; }
@@ -160,10 +156,10 @@ main {
     display: flex;
     flex-wrap: wrap;
     width: 100%;
-    background-color: white;
+    background-color: whitesmoke;
     justify-content: space-evenly;
     box-sizing: border-box;
-    padding: 80px 0px 70px 0px; }
+    padding-top: 80px; }
     main .planes img {
       width: 300px;
       height: 300px;
@@ -192,9 +188,9 @@ main {
       display: flex;
       flex-direction: column;
       align-items: center;
-      border-left: 2px solid white;
-      border-right: 2px solid white;
-      border-bottom: 2px solid white;
+      border-left: 2px solid whitesmoke;
+      border-right: 2px solid whitesmoke;
+      border-bottom: 2px solid whitesmoke;
       box-shadow: -3px 23px 56px -13px rgba(138, 43, 226, 0.79);
       -webkit-box-shadow: -3px 23px 56px -13px rgba(138, 43, 226, 0.79);
       -moz-box-shadow: -3px 23px 56px -13px rgba(138, 43, 226, 0.79); }
@@ -205,9 +201,9 @@ main {
       display: flex;
       flex-direction: column;
       align-items: center;
-      border-left: 2px solid white;
-      border-right: 2px solid white;
-      border-bottom: 2px solid white;
+      border-left: 2px solid whitesmoke;
+      border-right: 2px solid whitesmoke;
+      border-bottom: 2px solid whitesmoke;
       box-shadow: -3px 23px 56px -13px rgba(138, 43, 226, 0.79);
       -webkit-box-shadow: -3px 23px 56px -13px rgba(138, 43, 226, 0.79);
       -moz-box-shadow: -3px 23px 56px -13px rgba(138, 43, 226, 0.79); }
@@ -218,18 +214,16 @@ main {
       display: flex;
       flex-direction: column;
       align-items: center;
-      border-left: 2px solid white;
-      border-right: 2px solid white;
-      border-bottom: 2px solid white;
+      border-left: 2px solid whitesmoke;
+      border-right: 2px solid whitesmoke;
+      border-bottom: 2px solid whitesmoke;
       box-shadow: -3px 23px 56px -13px rgba(138, 43, 226, 0.79);
       -webkit-box-shadow: -3px 23px 56px -13px rgba(138, 43, 226, 0.79);
       -moz-box-shadow: -3px 23px 56px -13px rgba(138, 43, 226, 0.79); }
   main .planes-boton {
-    background-color: white;
+    background-color: whitesmoke;
     width: 100%;
-    height: 130px;
-    display: flex;
-    justify-content: center; }
+    height: 160px; }
     main .planes-boton .boton a {
       color: blueviolet;
       text-decoration: none;
@@ -266,10 +260,7 @@ main {
       margin: 0; }
     main .img-galery .galery-a {
       grid-area: galery-a;
-      position: relative;
-      display: flex;
-      justify-content: center;
-      align-items: center; }
+      position: relative; }
       main .img-galery .galery-a p {
         color: whitesmoke;
         position: absolute;
@@ -280,10 +271,7 @@ main {
         margin: 0; }
     main .img-galery .galery-b {
       grid-area: galery-b;
-      position: relative;
-      display: flex;
-      justify-content: center;
-      align-items: center; }
+      position: relative; }
       main .img-galery .galery-b p {
         color: whitesmoke;
         position: absolute;
@@ -294,10 +282,7 @@ main {
         margin: 0; }
     main .img-galery .galery-c {
       grid-area: galery-c;
-      position: relative;
-      display: flex;
-      justify-content: center;
-      align-items: center; }
+      position: relative; }
       main .img-galery .galery-c p {
         color: whitesmoke;
         position: absolute;
@@ -322,20 +307,18 @@ main {
       font-family: 'Poppins', sans-serif;
       font-size: 70px;
       margin: 0;
-      text-shadow: -2px -2px 1px black, 2px 2px 1px black, -2px 2px 1px black, 2px -2px 1px black; }
+      text-shadow: -2px -2px 1px black 0, 0, 0, 2px 2px 1px black 0, 0, 0, -2px 2px 1px black 0, 0, 0, 2px -2px 1px black 0, 0, 0; }
     main .banner-nosotros h3 {
       color: whitesmoke;
       font-family: 'Poppins', sans-serif;
       font-size: 30px;
       margin: 0;
       padding-bottom: 90px;
-      text-shadow: -2px -2px 1px black, 2px 2px 1px black, -2px 2px 1px black, 2px -2px 1px black; }
+      text-shadow: -2px -2px 1px black 0, 0, 0, 2px 2px 1px black 0, 0, 0, -2px 2px 1px black 0, 0, 0, 2px -2px 1px black 0, 0, 0; }
   main .nosotros {
     width: 100%;
     background-color: blueviolet;
-    color: whitesmoke;
-    display: flex;
-    justify-content: center; }
+    color: whitesmoke; }
     main .nosotros div {
       width: 75%;
       text-align: center;
@@ -363,26 +346,23 @@ main {
     background-color: black;
     width: 100%;
     height: 89vh;
-    display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
     text-align: center; }
     main .banner-planes div h2 {
       color: whitesmoke;
       font-family: 'Poppins', sans-serif;
       font-size: 30px;
-      text-shadow: -2px -2px 1px black, 2px 2px 1px black, -2px 2px 1px black, 2px -2px 1px black; }
+      text-shadow: -2px -2px 1px black 0, 0, 0, 2px 2px 1px black 0, 0, 0, -2px 2px 1px black 0, 0, 0, 2px -2px 1px black 0, 0, 0; }
     main .banner-planes div h3 {
       color: blueviolet;
       font-family: 'Poppins', sans-serif;
       font-size: 60px;
-      text-shadow: -2px -2px 1px black, 2px 2px 1px black, -2px 2px 1px black, 2px -2px 1px black; }
+      text-shadow: -2px -2px 1px black 0, 0, 0, 2px 2px 1px black 0, 0, 0, -2px 2px 1px black 0, 0, 0, 2px -2px 1px black 0, 0, 0; }
   main .planes-asesorias {
     display: flex;
     flex-wrap: wrap;
     width: 100%;
-    background-color: white;
+    background-color: whitesmoke;
     justify-content: space-evenly;
     box-sizing: border-box;
     padding: 50px 0px 70px 0px; }
@@ -393,9 +373,9 @@ main {
       display: flex;
       flex-direction: column;
       align-items: center;
-      border-left: 2px solid white;
-      border-right: 2px solid white;
-      border-bottom: 2px solid white;
+      border-left: 2px solid whitesmoke;
+      border-right: 2px solid whitesmoke;
+      border-bottom: 2px solid whitesmoke;
       box-shadow: 1px 16px 52px 8px rgba(138, 43, 226, 0.75);
       -webkit-box-shadow: 1px 16px 52px 8px rgba(138, 43, 226, 0.75);
       -moz-box-shadow: 1px 16px 52px 8px rgba(138, 43, 226, 0.75); }
@@ -446,30 +426,24 @@ main {
       font-family: 'Poppins', sans-serif;
       font-size: 70px;
       margin: 0;
-      text-shadow: -2px -2px 1px black, 2px 2px 1px black, -2px 2px 1px black, 2px -2px 1px black; }
+      text-shadow: -2px -2px 1px black 0, 0, 0, 2px 2px 1px black 0, 0, 0, -2px 2px 1px black 0, 0, 0, 2px -2px 1px black 0, 0, 0; }
     main .banner-contacto h3 {
       color: whitesmoke;
       font-family: 'Poppins', sans-serif;
       font-size: 30px;
       margin: 0;
       padding-bottom: 90px;
-      text-shadow: -2px -2px 1px black, 2px 2px 1px black, -2px 2px 1px black, 2px -2px 1px black; }
+      text-shadow: -2px -2px 1px black 0, 0, 0, 2px 2px 1px black 0, 0, 0, -2px 2px 1px black 0, 0, 0, 2px -2px 1px black 0, 0, 0; }
   main .contacto {
     background-color: blueviolet;
     width: 100%;
-    display: flex;
     flex-direction: column;
     flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
     text-align: center; }
     main .contacto .contacto-social-media {
       width: 100%;
       padding: 20px;
-      display: flex;
       flex-direction: column;
-      justify-content: center;
-      align-items: center;
       box-sizing: border-box; }
       main .contacto .contacto-social-media h2 {
         color: whitesmoke;
@@ -497,10 +471,7 @@ main {
     main .contacto .contacto-form {
       width: 600px;
       box-sizing: border-box;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center; }
+      flex-direction: column; }
       main .contacto .contacto-form input {
         width: 100%;
         box-sizing: border-box;
@@ -509,22 +480,13 @@ main {
       main .contacto .contacto-form .nombre {
         height: 50px;
         box-sizing: border-box;
-        display: flex;
-        align-items: center;
-        justify-content: center;
         margin: 15px 0 15px 0; }
       main .contacto .contacto-form .email {
         height: 50px;
         box-sizing: border-box;
-        display: flex;
-        align-items: center;
-        justify-content: center;
         margin: 15px 0 15px 0; }
       main .contacto .contacto-form .dudas {
         box-sizing: border-box;
-        display: flex;
-        align-items: center;
-        justify-content: center;
         margin: 15px 0 15px 0; }
         main .contacto .contacto-form .dudas textarea {
           width: 100%;
@@ -533,9 +495,6 @@ main {
           border: solid 2px black; }
       main .contacto .contacto-form .boton-enviar {
         box-sizing: border-box;
-        display: flex;
-        align-items: center;
-        justify-content: center;
         margin: 15px 0 15px 0; }
         main .contacto .contacto-form .boton-enviar input {
           transition: 0.3s; }
@@ -545,13 +504,10 @@ main {
             padding: 10px;
             margin: 10px 0 10px 0;
             color: whitesmoke;
-            background-color: #a84ffc;
+            background-color: blueviolet;
             border: 2px solid whitesmoke; }
     main .contacto .direcciones {
-      display: flex;
       flex-wrap: wrap;
-      justify-content: center;
-      align-items: center;
       box-sizing: border-box;
       width: 900px;
       padding-bottom: 100px;
@@ -566,10 +522,7 @@ main {
         margin: 20px; }
   main .mi-perfil {
     position: relative;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center; }
+    flex-direction: column; }
     main .mi-perfil .banner-perfil {
       display: grid;
       grid-template-columns: repeat(7, 1fr);
@@ -592,14 +545,11 @@ main {
         object-fit: cover; }
     main .mi-perfil .banner-title {
       width: 100%;
-      display: flex;
       flex-direction: column;
-      justify-content: center;
-      align-items: center;
       text-align: center;
       position: absolute;
       top: 65vh;
-      text-shadow: -2px -2px 1px black, 2px 2px 1px black, -2px 2px 1px black, 2px -2px 1px black; }
+      text-shadow: -2px -2px 1px black 0, 0, 0, 2px 2px 1px black 0, 0, 0, -2px 2px 1px black 0, 0, 0, 2px -2px 1px black 0, 0, 0; }
       main .mi-perfil .banner-title h2 {
         font-style: italic;
         font-family: 'Poppins', sans-serif;
@@ -611,15 +561,13 @@ main {
         font-style: italic;
         font-family: 'Poppins', sans-serif;
         font-size: 35px;
-        color: white;
+        color: whitesmoke;
         width: 100%;
         margin: 0; }
   main .logueo {
     background-color: whitesmoke;
     padding: 100px 0 100px 0;
-    color: black;
-    display: flex;
-    justify-content: center; }
+    color: black; }
     main .logueo .logueo-form {
       width: 80%; }
       main .logueo .logueo-form .logueo-email input {
@@ -639,8 +587,8 @@ main {
         transition: 0.3s; }
         main .logueo .logueo-form .logueo-boton input:hover {
           color: whitesmoke;
-          background-color: #a84ffc;
-          border: 2px solid black; }
+          background-color: blueviolet;
+          border: 2px solid black 0, 0, 0; }
       main .logueo .logueo-form h2 {
         font-size: 20px;
         font-style: italic;
@@ -648,6 +596,11 @@ main {
       main .logueo .logueo-form a {
         text-decoration: none;
         color: blueviolet; }
+
+header a, main .banner, main .info .info-a, main .info .info-b, main .info .info-c, main .planes-boton, main .img-galery .galery-a, main .img-galery .galery-b, main .img-galery .galery-c, main .nosotros, main .banner-planes, main .contacto, main .contacto .contacto-social-media, main .contacto .contacto-form, main .contacto .contacto-form .nombre, main .contacto .contacto-form .email, main .contacto .contacto-form .dudas, main .contacto .contacto-form .boton-enviar, main .contacto .direcciones, main .mi-perfil, main .mi-perfil .banner-title, main .logueo {
+  display: flex;
+  justify-content: center;
+  align-items: center; }
 
 footer {
   background-color: rgba(0, 0, 0, 0.87);
@@ -657,13 +610,13 @@ footer {
   align-items: center;
   flex-wrap: wrap;
   grid-area: footer;
-  color: white; }
+  color: whitesmoke; }
   footer .footer-left {
     width: 300px;
     margin: 0; }
     footer .footer-left a {
       text-decoration: none;
-      color: white;
+      color: whitesmoke;
       font-size: 15px;
       font-style: italic;
       font-family: 'Times New Roman', Times, serif; }
