--- a/css/estilos.css
+++ b/css/estilos.css
@@ -95,14 +95,14 @@ main {
       font-family: 'Poppins', sans-serif;
       font-size: 30px;
       margin: 0;
-      text-shadow: -2px -2px 1px black 0, 0, 0, 2px 2px 1px black 0, 0, 0, -2px 2px 1px black 0, 0, 0, 2px -2px 1px black 0, 0, 0; }
+      text-shadow: -2px -2px 1px black, 2px 2px 1px black, -2px 2px 1px black, 2px -2px 1px black; }
     main .banner h3 {
       color: blueviolet;
       font-family: 'Poppins', sans-serif;
       font-size: 70px;
       margin-top: 70px;
       margin-bottom: 90px;
-      text-shadow: -2px -2px 1px black 0, 0, 0, 2px 2px 1px black 0, 0, 0, -2px 2px 1px black 0, 0, 0, 2px -2px 1px black 0, 0, 0; }
+      text-shadow: -2px -2px 1px black, 2px 2px 1px black, -2px 2px 1px black, 2px -2px 1px black; }
     main .banner a {
       color: whitesmoke;
       text-decoration: none;
@@ -110,7 +110,7 @@ main {
       font-family: 'Poppins', sans-serif;
       border: 3px solid blueviolet;
       padding: 8px;
-      text-shadow: -2px -2px 1px black 0, 0, 0, 2px 2px 1px black 0, 0, 0, -2px 2px 1px black 0, 0, 0, 2px -2px 1px black 0, 0, 0; }
+      text-shadow: -2px -2px 1px black, 2px 2px 1px black, -2px 2px 1px black, 2px -2px 1px black; }
       main .banner a:hover {
         color: whitesmoke;
         background-color: blueviolet;
@@ -307,14 +307,14 @@ main {
       font-family: 'Poppins', sans-serif;
       font-size: 70px;
       margin: 0;
-      text-shadow: -2px -2px 1px black 0, 0, 0, 2px 2px 1px black 0, 0, 0, -2px 2px 1px black 0, 0, 0, 2px -2px 1px black 0, 0, 0; }
+      text-shadow: -2px -2px 1px black, 2px 2px 1px black, -2px 2px 1px black, 2px -2px 1px black; }
     main .banner-nosotros h3 {
       color: whitesmoke;
       font-family: 'Poppins', sans-serif;
       font-size: 30px;
       margin: 0;
       padding-bottom: 90px;
-      text-shadow: -2px -2px 1px black 0, 0, 0, 2px 2px 1px black 0, 0, 0, -2px 2px 1px black 0, 0, 0, 2px -2px 1px black 0, 0, 0; }
+      text-shadow: -2px -2px 1px black, 2px 2px 1px black, -2px 2px 1px black, 2px -2px 1px black; }
   main .nosotros {
     width: 100%;
     background-color: blueviolet;
@@ -352,12 +352,12 @@ main {
       color: whitesmoke;
       font-family: 'Poppins', sans-serif;
       font-size: 30px;
-      text-shadow: -2px -2px 1px black 0, 0, 0, 2px 2px 1px black 0, 0, 0, -2px 2px 1px black 0, 0, 0, 2px -2px 1px black 0, 0, 0; }
+      text-shadow: -2px -2px 1px black, 2px 2px 1px black, -2px 2px 1px black, 2px -2px 1px black; }
     main .banner-planes div h3 {
       color: blueviolet;
       font-family: 'Poppins', sans-serif;
       font-size: 60px;
-      text-shadow: -2px -2px 1px black 0, 0, 0, 2px 2px 1px black 0, 0, 0, -2px 2px 1px black 0, 0, 0, 2px -2px 1px black 0, 0, 0; }
+      text-shadow: -2px -2px 1px black, 2px 2px 1px black, -2px 2px 1px black, 2px -2px 1px black; }
   main .planes-asesorias {
     display: flex;
     flex-wrap: wrap;
@@ -426,14 +426,14 @@ main {
       font-family: 'Poppins', sans-serif;
       font-size: 70px;
       margin: 0;
-      text-shadow: -2px -2px 1px black 0, 0, 0, 2px 2px 1px black 0, 0, 0, -2px 2px 1px black 0, 0, 0, 2px -2px 1px black 0, 0, 0; }
+      text-shadow: -2px -2px 1px black, 2px 2px 1px black, -2px 2px 1px black, 2px -2px 1px black; }
     main .banner-contacto h3 {
       color: whitesmoke;
       font-family: 'Poppins', sans-serif;
       font-size: 30px;
       margin: 0;
       padding-bottom: 90px;
-      text-shadow: -2px -2px 1px black 0, 0, 0, 2px 2px 1px black 0, 0, 0, -2px 2px 1px black 0, 0, 0, 2px -2px 1px black 0, 0, 0; }
+      text-shadow: -2px -2px 1px black, 2px 2px 1px black, -2px 2px 1px black, 2px -2px 1px black; }
   main .contacto {
     background-color: blueviolet;
     width: 100%;
@@ -549,7 +549,7 @@ main {
       text-align: center;
       position: absolute;
       top: 65vh;
-      text-shadow: -2px -2px 1px black 0, 0, 0, 2px 2px 1px black 0, 0, 0, -2px 2px 1px black 0, 0, 0, 2px -2px 1px black 0, 0, 0; }
+      text-shadow: -2px -2px 1px black, 2px 2px 1px black, -2px 2px 1px black, 2px -2px 1px black; }
       main .mi-perfil .banner-title h2 {
         font-style: italic;
         font-family: 'Poppins', sans-serif;
