--- a/scss/components/_main.scss
+++ b/scss/components/_main.scss
@@ -14,7 +14,7 @@ main{
             font-family: 'Poppins', sans-serif;
             font-size: nth($font-size, 3);
             margin: 0;
-            text-shadow: -2px -2px 1px $color-secundario(0, 0, 0), 2px 2px 1px $color-secundario(0, 0, 0), -2px 2px 1px $color-secundario(0, 0, 0), 2px -2px 1px $color-secundario(0, 0, 0);
+            text-shadow: -2px -2px 1px $color-secundario, 2px 2px 1px $color-secundario, -2px 2px 1px $color-secundario, 2px -2px 1px $color-secundario;
         }
         h3{
             color: $color-principal;
@@ -22,7 +22,7 @@ main{
             font-size: nth($font-size, 6);
             margin-top: 70px;
             margin-bottom: 90px;
-            text-shadow: -2px -2px 1px $color-secundario(0, 0, 0), 2px 2px 1px $color-secundario(0, 0, 0), -2px 2px 1px $color-secundario(0, 0, 0), 2px -2px 1px $color-secundario(0, 0, 0);
+            text-shadow: -2px -2px 1px $color-secundario, 2px 2px 1px $color-secundario, -2px 2px 1px $color-secundario, 2px -2px 1px $color-secundario;
         }
         a{
             color: $color-terciario;
@@ -31,7 +31,7 @@ main{
             font-family: 'Poppins', sans-serif;
             border: 3px solid $color-principal;
             padding: 8px;
-            text-shadow: -2px -2px 1px $color-secundario(0, 0, 0), 2px 2px 1px $color-secundario(0, 0, 0), -2px 2px 1px $color-secundario(0, 0, 0), 2px -2px 1px $color-secundario(0, 0, 0);
+            text-shadow: -2px -2px 1px $color-secundario, 2px 2px 1px $color-secundario, -2px 2px 1px $color-secundario, 2px -2px 1px $color-secundario;
             &:hover{
                 color: $color-terciario;
                 background-color: $color-principal;
@@ -270,7 +270,7 @@ main{
             font-family: 'Poppins', sans-serif;
             font-size: nth($font-size, 6);
             margin: 0;
-            text-shadow: -2px -2px 1px $color-secundario(0, 0, 0), 2px 2px 1px $color-secundario(0, 0, 0), -2px 2px 1px $color-secundario(0, 0, 0), 2px -2px 1px $color-secundario(0, 0, 0);
+            text-shadow: -2px -2px 1px $color-secundario, 2px 2px 1px $color-secundario, -2px 2px 1px $color-secundario, 2px -2px 1px $color-secundario;
         }
         h3{
             color: $color-terciario;
@@ -278,7 +278,7 @@ main{
             font-size: nth($font-size, 3);
             margin: 0;
             padding-bottom: 90px;
-            text-shadow: -2px -2px 1px $color-secundario(0, 0, 0), 2px 2px 1px $color-secundario(0, 0, 0), -2px 2px 1px $color-secundario(0, 0, 0), 2px -2px 1px $color-secundario(0, 0, 0);
+            text-shadow: -2px -2px 1px $color-secundario, 2px 2px 1px $color-secundario, -2px 2px 1px $color-secundario, 2px -2px 1px $color-secundario;
         }
     }
     .nosotros{
@@ -330,13 +330,13 @@ main{
                 color: $color-terciario;
                 font-family: 'Poppins', sans-serif;
                 font-size: nth($font-size, 3);
-                text-shadow: -2px -2px 1px $color-secundario(0, 0, 0), 2px 2px 1px $color-secundario(0, 0, 0), -2px 2px 1px $color-secundario(0, 0, 0), 2px -2px 1px $color-secundario(0, 0, 0);
+                text-shadow: -2px -2px 1px $color-secundario, 2px 2px 1px $color-secundario, -2px 2px 1px $color-secundario, 2px -2px 1px $color-secundario;
             }
             h3{
                 color: $color-principal;
                 font-family: 'Poppins', sans-serif;
                 font-size: nth($font-size, 5);
-                text-shadow: -2px -2px 1px $color-secundario(0, 0, 0), 2px 2px 1px $color-secundario(0, 0, 0), -2px 2px 1px $color-secundario(0, 0, 0), 2px -2px 1px $color-secundario(0, 0, 0); 
+                text-shadow: -2px -2px 1px $color-secundario, 2px 2px 1px $color-secundario, -2px 2px 1px $color-secundario, 2px -2px 1px $color-secundario;
             }
         }
     }
@@ -418,7 +418,7 @@ main{
             font-family: 'Poppins', sans-serif;
             font-size: nth($font-size, 6);
             margin: 0;
-            text-shadow: -2px -2px 1px $color-secundario(0, 0, 0), 2px 2px 1px $color-secundario(0, 0, 0), -2px 2px 1px $color-secundario(0, 0, 0), 2px -2px 1px $color-secundario(0, 0, 0);
+            text-shadow: -2px -2px 1px $color-secundario, 2px 2px 1px $color-secundario, -2px 2px 1px $color-secundario, 2px -2px 1px $color-secundario;
         }
         h3{
             color: $color-terciario;
@@ -426,7 +426,7 @@ main{
             font-size: nth($font-size, 3);
             margin: 0;
             padding-bottom: 90px;
-            text-shadow: -2px -2px 1px $color-secundario(0, 0, 0), 2px 2px 1px $color-secundario(0, 0, 0), -2px 2px 1px $color-secundario(0, 0, 0), 2px -2px 1px $color-secundario(0, 0, 0);
+            text-shadow: -2px -2px 1px $color-secundario, 2px 2px 1px $color-secundario, -2px 2px 1px $color-secundario, 2px -2px 1px $color-secundario;
         }
     }
     .contacto{
@@ -589,7 +589,7 @@ main{
             text-align: center;
             position: absolute;
             top: 65vh;
-            text-shadow: -2px -2px 1px $color-secundario(0, 0, 0), 2px 2px 1px $color-secundario(0, 0, 0), -2px 2px 1px $color-secundario(0, 0, 0), 2px -2px 1px $color-secundario(0, 0, 0);
+            text-shadow: -2px -2px 1px $color-secundario, 2px 2px 1px $color-secundario, -2px 2px 1px $color-secundario, 2px -2px 1px $color-secundario;
             h2{
                 font-style: italic;
                 font-family: 'Poppins', sans-serif;
