correccion de detalles

--- a/scss/components/_footer.scss
+++ b/scss/components/_footer.scss
@@ -1,4 +1,4 @@
-@import "../base/variables";
+// @import "../base/variables";
 footer{
     background-color: rgba(0, 0, 0, 0.87);
     width: 100%;
